# ChatDev

./: .dockerignore  .env  .env.docker  .env.example  .env.sample  .gitignore  .gitmodules  .pre-commit-config.yaml  .python-version  CITATION.cff  CLAUDE_CODE_INTEGRATION.md  Contribution.md  Contribution_Guidelines.md  DISCLAIMER.md  Dependabot.yml  DockerFile  Dockerfile  Dockerfile_main  LICENSE  MODEL_CONFIGURATION.md  Makefile  PROJECT_STRUCTURE.md  Pipfile  README-Chinese.md  README-Dutch.md  README-Filipino.md  README-French.md  README-Hindi.md  README-Japanese.md  README-Korean.md  README-Portuguese.md  README-Slovak.md  README-Spanish.md  README-Turkish.md  README-zh.md  README.es.md  README.md  TUTORIAL.md  YAML_FORMAT_QUICK_GUIDE.md  app.py  (+33 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: translate_readme.py
.obsidian/: workspace.json
Auto_Making/: API_8_3_Financial_Model_Prompt.ipynb
CompanyConfig/: flexible_ai_json_handler.py
LEARN/: MY_README.md
MultiAgentEbook/: README.md  book_communication_index.html  book_evolution_index.html  book_organization_index.html  book_simulation_index.html  book_style.css  communication.html  evolution.html  index.html  main.js  organization.html  papers.csv  simulation.html  style.css  transform_csv.py
NLDD/: README.md
NoteBook/: ChatDev_1.ipynb
NotrBook/: ChatDev_1.ipynb
SRDD/: README.md
WareHouse/: ChatChainConfig.json  PhaseConfig.json  gamewindow.py  image.py  main.py  manual.md  meta.txt  scoreboard.py
camel/: __init__.py  bedrock_model.py  config_loader.py  configs.py  generators.py  human.py  model_backend.py  typing.py  utils.py  web_spider.py
chat_visualizer/: app.py
chatdev/: bedrock_sd.py  chat_chain.py  chat_env.py  codes.py  company_hr.py  competition.py  composed_phase.py  documents.py  eval_quality.py  localai.py  logger.py  pdf_reader.py  phase.py  richshell.py  roster.py  statistics.py  test_unfinished_function.py  utils.py  waiting.py  watch_dog.py
check/: check.py  check_workflow.py  (+1 more)
(+5397 files in other folders)
