[tool.poetry]
name = "chatdev"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pip = "23.2.1"
colorama = "0.4.6"
Flask-SocketIO = "5.3.4"
importlib-metadata = "6.8.0"
install = "1.3.5"
invoke = "2.2.0"
jieba = "0.42.1"
Markdown = "3.4.4"
numpy = "1.24.3"
openai = "0.27.8"
Pillow = "9.5.0"
pygame = "2.5.1"
PySocks = "1.7.1"
python-lsp-server = "1.7.1"
retry = "0.9.2"
retrying = "1.3.4"
tenacity = "8.2.2"
tiktoken = "0.4.0"
timeout-decorator = "0.5.0"
whatthepatch = "1.0.4"
wheel = "0.41.2"

[tool.poetry.dev-dependencies]
autopep8 = "1.6.0"
flake8 = "6.0.0"
pre-commit = "3.3.3"
pycodestyle = "2.10.0"
pydocstyle = "6.2.3"
pyflakes = "3.0.1"
pylint = "2.17.0"
rope = "1.7.0"
yapf = "0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
